syntax = "proto3";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string userName = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string message = 1;
  bool success = 2;
  string status = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  optional string token = 2;
  bool success = 3;
  string status = 4;
}
